src/app/app.component.css
.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* flex-direction: column; */
  /* align-items: center; */
  width: 100%;
  margin: 0 auto;
  /* display: grid;
  grid-template-columns: 1fr auto 1fr;
  grid-template-rows: repeat(3, auto);
  grid-template-areas: 
    "header header header" 
    "body body body"
    "footer footer footer"; */
    /* overflow-x: auto; */
  }
  
  /* cza-header {
    grid-area: header;
  }
  
  cza-body {
    grid-area: body;
  }
  
  cza-footer {
    grid-area: footer;
  }
  
  @media only screen and (min-width: 720px) {
    .container {
      grid-template-areas: 
        "header header header" 
        "body body body"
        "footer footer footer";
  }
} */

@media only screen and (min-width: 720px) {
  .container {
    width: 95%;
  }
}

@media only screen and (min-width: 1000px) {
  .container {
    width: 80%;
  }
}

cza-header {
  margin: 0 auto;
}

cza-body, cza-footer {
  flex-grow: 1;
}

